# cp

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  VERSION  build.py  compile  configure.ac  depends.ps1  depends.sh  main.c
.github/workflows/: build.yml  change-year.yml  headers_syntax.yml  monitor.yml  newline.yml  package.yml
Misc/: CONTRIBUTORS.md  depends.ps1  depends.sh
Test/platform/: mmap.c
debian/: changelog  control  copyright  cp-devel.install  cp-runtime.install  libcp-dev.install  libcp0.install  not-installed  rules
src/: Makefile.am  commandline.c  commandline.h  cp.rc  cpassert.h  cpc  cpc.rc  cptypes.h  exports.h  launch.c  lib.rc  main.c  main.h  parsearg.c  parsearg.h  path.c  path.h  report_error.c  report_error.h  safe_string.c  safe_string.h  version.c  version.h
src/Test/platform/: mmap.c
src/cpc/: help.txt  launch.c  main.c  main.h
src/cpc_src/: help.txt  launch.c  main.c
src/module_parser/: cpoffset.c  cpoffset.h  header.c  header.h  module.h  module_parser.h  segmentnum.h  stringtab.c  stringtab.h  symbols.h
src/module_parser/symbols/: attr.h  class.h  func.h
src/objects/: types.h
src/platform/: README.md  mmap.c  mmap.h
